fix: 全屏舞台 error-tips z-index

--- a/src/components/gui/gui.css
+++ b/src/components/gui/gui.css
@@ -384,7 +384,7 @@ $fade-out-distance: 0.9375rem;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 999999;
+    z-index: 100;
 }
 
 .stage-and-target-wrapper .warning-border {
